tests/negative/test_expr_dot_unknown_member.orb
data Foo {
    i32 a, b;
}

fnc main() {
    let Foo f;
    f.c;
}